<resources>
    <string name="app_name">Conecta4</string>
    <string name="main_activity_title">Conecta4</string>
    <string name="messages_game_state" />
    <string name="ButtonDescription" />
    <string name="aboutText">Acerca de</string>
    <string name="sendMessageText">Enviar correo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aboutDialog">Debes unir 4 puntos consecutivos de forma Horizaontal,Vertical o Diagonal para ganar</string>
    <string name="gameOverTitle">Fin del juego</string>
    <string name="gameOverMessage">Desesa jugar otra vez?</string>
    <!-- pertenician al proyecto que importe pero on lo voy a usar
    <string name="firstCategoryPrefTitle" /></string>
    <string name="editTextPrefTitle" /></string>
    <string name="editTextPrefSummary" /></string>
    -->
    <string name="firstCategoryPrefTitle">Configuracion</string>
    <string name="editTextPrefTitle">Nombre del Jugador</string>
    <string name="editTextPrefSummary">Pulse para cambiar el nombre</string>
    <string name="checBoxPrefTitle" >Musica</string>
    <string name="checBoxPrefSummary" >Check si desea escuchar musica</string>
    <string name="ajustesButtonMenu">Ajustes</string>
    <string name="portadaMessage">Conecta 4</string>
    <string name="portadaImage">imagenPortadaIronMan</string>
</resources>
