<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/firstCategoryPrefTitle">
        <EditTextPreference
            android:key="playerName"
            android:title="@string/editTextPrefTitle"
            android:summary="@string/editTextPrefSummary" />
   		<!--
        <ListPreference
            android:key="figure"
            android:title="@string/listPrefTitle"
            android:summary="@string/listPrefSummary"
            android:entries="@array/figures"
            android:entryValues="@array/figureCodes"
            android:dialogTitle="@string/listPrefDialogTitle"/>
            -->
    	<CheckBoxPreference 
            android:key="music"
            android:title="@string/checBoxPrefTitle"
            android:summary="@string/checBoxPrefSummary"
            android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>
